--- a/423A Group Project Code.qmd
+++ b/423A Group Project Code.qmd
@@ -38,6 +38,7 @@ library(cowplot)
 library(ggrepel)
 library(patchwork)
 library(cartography)
+library(GGally)
 library(here)
 ```
 
@@ -971,13 +972,25 @@ p1 + p2 + plot_annotation(title = 'Changes in Housing Costs, Year over Year',
                           subtitle = 'Determining Gentrification, Part 3 - Is there an Increase in the Cost of Housing?')
 ```
 
-```{r}
-library(GGally)
+## Combing All Metrics
 
+```{r correlation-of-deltas}
 all_data_gentrify |> 
   filter(year > 2010) |> 
   select(contains('delta')) |> 
-  ggpairs(ggplot)
+  ggpairs()
+
+all_data_gentrify |> 
+  filter(year > 2010) |> 
+  select(contains('delta')) |>
+  ggcorr(method = c("everything", "pearson"), 
+         high = "darkgreen")
+```
+
+```{r}
+all_data_gentrify |> 
+  ggplot() + 
+  geom_point
 ```
 
 ```{r}
