--- a/423A Group Project Code.qmd
+++ b/423A Group Project Code.qmd
@@ -37,6 +37,7 @@ library(skimr)
 library(cowplot)
 library(ggrepel)
 library(patchwork)
+library(gridExtra)
 library(cartography)
 library(GGally)
 library(here)
@@ -1016,6 +1017,47 @@ all_data_gentrify |>
            hjust = 1,
            size = 2.25,
            fontface = 'italic')
+```
+
+## Relationships with Educational Outcomes
+
+```{r viz-enrollment}
+# Create the boxplot
+p1 <- all_data_gentrify_final |> 
+  ggplot() + 
+  geom_boxplot(aes(x = gentrifying, 
+                   y = total_enrollment, 
+                   fill = factor(all_data_gentrify_final$gentrifying, 
+                             levels = c("FALSE", 
+                                        "TRUE")))) +
+  theme_minimal() + 
+  scale_fill_manual("Gentrifying", values = c("lightgreen", "darkgreen")) +
+  theme(legend.position = 'none') +
+  labs(title = 'Gentrifying Years Have Larger Enrollment', 
+       x = 'Gentrifying Years', 
+       y = 'Total Enrollment')
+
+# Create the line plot
+p2 <- all_data_gentrify_final |> 
+  ggplot() + 
+  geom_line(aes(x = year, 
+                y = total_enrollment, 
+                group = 1), 
+            color = 'lightgreen', 
+            linewidth = 1.5) +
+  geom_point(data = filter(all_data_gentrify_final, as.character(gentrifying) == "TRUE"), 
+             aes(x = year, 
+                 y = total_enrollment), 
+             color = 'darkgreen',
+             size = 4) +
+  theme_minimal() + 
+  theme(legend.position = 'none') +
+  labs(x = 'Year', 
+       y = 'Total Enrollment')
+
+# Combine the two plots
+grid.arrange(p1, p2, ncol = 1)
+
 ```
 
 ```{r}
